Compiler/Examples/ERROR/_gen_func_call.slang
/*unit A
	foo do
		foo[T].call
	end
end */
foo(1)

foo[T](1)


